--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="utf-8">
     <title>Git Start</title>
 </head>
-
+<p>
+    I try new branch
+</p>
 <body>
 <h1> Hello World</h1>
+<p>I try to get rebase</p>
     <p> Hi!! My Name is Kostya</p>
+<h2> Now I'll check my branch</h2>
 
 </body>
 </html>
